--- a/rnat/package.json
+++ b/rnat/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "axios": "^1.8.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1"
+    "react-native-screens": "^4.9.1",
+    "react-native-sound": "^0.11.2",
+    "react-native-sound-player": "^0.14.5",
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
