--- a/rnat/package.json
+++ b/rnat/package.json
@@ -27,7 +27,8 @@
     "react-native-sound": "^0.11.2",
     "react-native-sound-player": "^0.14.5",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
