--- a/rnat/package.json
+++ b/rnat/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "axios": "^1.8.2",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-paper": "^5.13.1",
