--- a/rnat/package.json
+++ b/rnat/package.json
@@ -24,6 +24,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
