--- a/rnat/package.json
+++ b/rnat/package.json
@@ -22,10 +22,12 @@
     "react-native": "0.78.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-feather": "^1.1.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.4.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
